--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gamesprites",
-  "version": "0.2.1",
-  "description": "make spritesheets for use in games",
+  "name": "tweed-spritepacker",
+  "version": "0.2.2",
+  "description": "Sprite packing tool for HTML5 games",
   "keywords": "game sprites",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mcccclean/node-gamesprites.git"
+    "url": "https://github.com/tweed/tweed-spritepacker.git"
   },
   "dependencies": {
     "async": "*",
